# agent-workbench

./: .env.example  .gitignore  AGENTS.md  CODEX_IMPLEMENTATION_PACK.md  README.md  README_RUN.md  pyproject.toml  start.bat  start.sh
agents/chat/: agent.yaml
agents/comfyui_agent/: agent.py  agent.yaml
agents/echo_attachments/: agent.py  agent.yaml
agents/echo_script/: agent.py  agent.yaml
agents/render_test/: agent.py  agent.yaml
agents/script_lifecycle_lab/: README.md  agent.py  agent.yaml
agents/translate/: agent.yaml
ai_workbench/: __init__.py
ai_workbench/api/: __init__.py  avatar.py  deps.py  errors.py  main.py  ws.py
ai_workbench/core/: __init__.py  agent_defaults.py  agent_registry.py  agent_settings.py  attachments.py  avatar.py  capability_registry.py  capability_runtime.py  command_registry.py  config_schema.py  context.py  embedding.py  events.py  font_assets.py  forms.py  intent_pipeline.py  intent_router.py  intent_semantic_router.py  intent_specs.py  keyword_search.py  (+38 more)
capabilities/: __init__.py
docs/: AGENT_DEVELOPMENT.md  AI_CONTEXT.md  ARCHITECTURE.md  CAPABILITY_DEVELOPMENT.md  CODEX_KICKOFF_PROMPT.md  CODEX_ROUND_1.md  CODEX_ROUND_2.md  COMFYUI_PRESET_SCHEMA.md  EXTENSION_API.md  EXTENSION_ARCHITECTURE.md  FRONTEND_UI_COMPONENTS.md  MILESTONES.md  RELEASE_CHECKLIST.md  RUNTIME_PROTOCOLS.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
scripts/: build_portable.py  check.py  check_agents.py  check_docs_size.py  cleanup_attachments.py  create_agent.py  create_capability.py  download_knowledge_model.py  generate_registry_docs.py  reset_data.py  run_agent.py  run_app.py  run_command.py
tests/: __init__.py  test_action_forms.py  test_agent_actions.py  test_agent_settings.py  test_api.py  test_comfyui_agent_recipe.py  test_comfyui_capability.py  test_comfyui_library.py  test_command_execution.py  test_command_message_parts.py  test_config_schema.py  test_core_memory_context.py  test_dependency_contracts.py  test_download_knowledge_model.py  test_events.py  test_file_http_attachments.py  test_frontend_chat_contracts.py  test_inference_observability.py  test_intent_auto_routing.py  test_intent_routing.py  test_intent_semantic_router.py  test_intent_specs.py  test_knowledge_capability.py  test_knowledge_indexing.py  test_knowledge_models.py  test_knowledge_origins.py  test_knowledge_retrieval.py  test_knowledge_settings.py  test_llm_config.py  test_manifest_loading.py  test_message_parts.py  test_multimodal_embedding_profiles.py  test_multimodal_embedding_runtime.py  test_persistence.py  test_pet_capability.py  test_production_web.py  test_prompt_agent_execution.py  test_provider_status.py  test_registries.py  test_registry_docs.py  (+17 more)
(+210 files in other folders)
