[project]
name = "agent-workbench"
version = "0.1.0"
description = "A lightweight local AI workbench with callable agents and commands."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[project.optional-dependencies]
knowledge = [
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "transformers>=4.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
