[project]
name = "agent-workbench"
version = "0.1.0"
description = "A lightweight local AI workbench with callable agents and commands."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.7",
    "psutil>=5.9",
    "python-multipart>=0.0.9",
    "PyYAML>=6.0",
    "segno>=1.6",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[project.optional-dependencies]
knowledge = [
    "einops>=0.8",
    "Pillow>=10",
    "sentence-transformers>=3.0",
    "timm>=1.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
]
knowledge-cuda128 = [
    "einops>=0.8",
    "Pillow>=10",
    "sentence-transformers>=3.0",
    "timm>=1.0",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
conflicts = [
    [
        { extra = "knowledge" },
        { extra = "knowledge-cuda128" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", extra = "knowledge-cuda128" },
]
torchvision = [
    { index = "pytorch-cu128", extra = "knowledge-cuda128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
